language_tests/source_files/invalid/guard_invalid.tr
func main() {
    guard 1 else { return }
    guard let value = 123 else { return }
}
